--- a/Front-End/yummy-master/MyCv.html
+++ b/Front-End/yummy-master/MyCv.html
@@ -112,17 +112,12 @@
                                         <a class="dropdown-item" href="contact.html">Contact</a>
                                     </div>
                                 </li> -->
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Features</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Categories</a>
-                                </li>
+                               
                                 <li class="nav-item">
                                     <a class="nav-link" href="archive.html">Archive</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="archive.html">My CV</a>
+                                    <a class="nav-link" href="index2.html">My CV</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">About</a>
