--- a/Front-End/yummy-master/contact.html
+++ b/Front-End/yummy-master/contact.html
@@ -117,7 +117,7 @@
                                     <a class="nav-link" href="archive.html">Archive</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="MyCv.html">My CV</a>
+                                    <a class="nav-link" href="index2.html">My CV</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">About</a>
